Fix typo (thanks lifewater!)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
         "alclient",
         "cutebee",
+        "franky",
         "goldenbat",
+        "MMORPG",
         "npcs",
         "respawn",
         "respawns",
