Add auth for future capabilities

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "alclient",
+        "aldata",
+        "auths",
         "cutebee",
         "franky",
         "goldenbat",
