--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "npcs",
         "respawn",
         "respawns",
+        "upsert",
         "xmagefi",
         "xmagefz",
         "xmagen",
