--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/earthiverse/ALData#readme",
   "dependencies": {
-    "alclient": "^0.9.63",
+    "alclient": "^0.9.65",
+    "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-rate-limit": "^6.1.0",
