--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "aldata",
   "description": "A website and API for getting data for use in the online MMORPG Adventure.land.",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "build/server.js",
   "type": "module",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +19,7 @@
   },
   "homepage": "https://github.com/earthiverse/ALData#readme",
   "dependencies": {
-    "alclient": "^0.9.76",
+    "alclient": "^0.10.4",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.2",
