Don't return vbats

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "respawn",
         "respawns",
         "upsert",
+        "vbat",
         "xmagefi",
         "xmagefz",
         "xmagen",
