add upgrade endpoint

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
+    "prettier": "^3.5.3",
     "typescript": "^5.8.3"
   }
 }
